Updated stylesheet to prevent edit profile picture upload input from covering the upload button.

--- a/app/modules/users/account/profile/users-account-profile.less
+++ b/app/modules/users/account/profile/users-account-profile.less
@@ -239,6 +239,9 @@ body.account.profile {
 			.fake-uploader-container {
 				position: relative;
 				.clearfix();
+				overflow: hidden;
+				width: 100%;
+				height: 34px;
 			}
 		}
 		ul.file-uploads {
